--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </li>
         </ul>
         <div id="social-links">
-            <a href="https://github.com/cixayah" target="_blank">
+            <a href="https://discord.gg/ENYHHzPZBN" target="_blank">
                 <ion-icon name="logo-discord"></ion-icon>
             </a>
 
