--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="container">
         <div id="profile">
-            <img src="./assets/avatar.png" alt="foto de perfil">
+            <img src="./assets/avatar.jpg" alt="foto de perfil">
             <p>Cix</p>
         </div>
         <div id="switch" onclick="toggleMode()">
@@ -23,7 +23,7 @@
             </span>
         </div>
         <ul>
-            <li>
+            <!-- <li>
                 <a href="#" target="_blank">
                     2
                 </a>
@@ -36,7 +36,7 @@
             <li>
                 <a href="#" target="_blank">
                     4
-                </a>
+                </a> -->
             <li>
                 <a href="https://pixgg.com/Cix" target="_blank">
                     PixGG
