--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <a href="https://instagram.com/cixayah" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
+            <a href="https://tiktok.com/@cixayah" target="_blank">
+                <ion-icon name="logo-tiktok"></ion-icon>
+            </a>
             <a href="https://youtube.com/@cixayah" target="_blank">
                 <ion-icon name="logo-youtube"></ion-icon>
             </a>
