--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
                     PixGG
                 </a>
             </li>
+            <li>
+                <a href="https://www.exitlag.com/aff.php?aff=10092049" target="_blank">
+                    ExitLag
+                </a>
+            </li>
+            <li>
+                <a href="https://www.vakinha.com.br/vaquinha/a-maior-campanha-solidaria-do-rs?" target="_blank">
+                    Ajude o Rio Grande do Sul
+                </a>
+            </li>
 
         </ul>
         <div id="social-links">
