--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link Tree do Cix</title>
+    <title>Links do Cix</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./assets/ico.png">
     <script defer src="./js/script.js"></script>
