--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </a>
         </div>
         <footer>
-            O sucesso começa com a coragem de tentar.
+            <p>"O sucesso começa com a coragem de tentar."</p>
             <a href="#">
                 <!-- palavra com link -->
             </a>
