--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </li>
             <li>
                 <a href="https://www.vakinha.com.br/vaquinha/a-maior-campanha-solidaria-do-rs?" target="_blank">
-                    Ajude o Rio Grande do Sul
+                    Aumigas e Aumigos do Pet
                 </a>
             </li>
 
