--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.vakinha.com.br/vaquinha/a-maior-campanha-solidaria-do-rs?" target="_blank">
+                <a href="https://lh3.googleusercontent.com/pw/AP1GczODzpmUqwFB-1-G9G9CO_8ziE3gaD4DoJGKqem6E0HBEoKR_EVUk9B5DYiZ9-VvQPSkm-BJnCGwK_0lukgNuXIXcSEjlTt04TTdH4HotMKm4mhB0PR0FeJy73Nc-Dg8Nb0zk_WBLh0Fw3EJzjo1suWz=w431-h647-s-no-gm?authuser=0"
+                    target="_blank">
                     Aumigas e Aumigos do Pet
                 </a>
             </li>
